--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
+server/.env.local
+server/.env.test.local
+server/.env.development.local
+server/.env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
