--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+server/.env
 server/.env.local
 server/.env.test.local
 server/.env.development.local
