--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "otp-generator": "^4.0.1",
     "react": "^18.3.1",
